Mise en place du Auth Swagger
